fix the mobile spacing on pill menu

--- a/components/splitpillmenu.module.css
+++ b/components/splitpillmenu.module.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  gap: 1rem;
+  gap: .5rem;
   border-radius: 56px;
   padding: 12px 24px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
